[package]
name = "TSAChain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
rsa = "0.5.0"
rand = "0.8.4"
ring = "0.16.20"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }