[package]
name = "TSAChain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
rsa = "0.5.0"
rand = "0.8.4"
ring = "0.16.20"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
ripemd160 = "0.9"
bs58 = "0.4"
hex = "0.4.3"
num-bigint = "0.4.2"
num-traits = "0.2.14"
base64 = "0.13"
pkcs1= "=0.2.4"
serde_json = "1.0"
lazy_static = "1.4.0"
futures = "0.3"
serde_yaml =  "0.8.23"
schemars =  "0.8.8"